--- a/ctf-tutorial.html
+++ b/ctf-tutorial.html
@@ -75,7 +75,7 @@
                     <br />
                     <h4>Post Exploitation / Priv Esc</h4>
                     <br /><br />
-                    <div class="row top-buffer">
+                    <!--<div class="row top-buffer">
                         <div class="col-sm-2">
                             <img src="images/linux.png" alt="Heartbleed" height="90" width="90">
                         </div>
@@ -83,12 +83,15 @@
                             <a href="CTF/tutorial/ubuntulinux.html">Linux - LinEnum.sh</a>
                             <p>A tutorial for enumeration with LinEnum.sh</p>
                         </div>
-                    </div>
+                    </div>-->
                     <br />
                     <h4>Maintaining Access</h4>
                     <br /><br />
                     <br />
                     <h4>Covering Tracks</h4>
+                    <br /><br />
+                    <br />
+                    <h4>Steganography</h4>
                     <br /><br />
                     <br />
                     <h4>Misc</h4>
