--- a/ctf-tutorial.html
+++ b/ctf-tutorial.html
@@ -96,6 +96,15 @@
                     <br />
                     <h4>Misc</h4>
                     <br /><br />
+                    <div class="row top-buffer">
+                        <div class="col-sm-2">
+                            <img src="images/tools-icon-white.png" alt="FCrackZip" height="75" width="75">
+                        </div>
+                        <div class="col-sm-10">
+                            <a href="CTF/tutorial/how-to-bruteforce-zip.html">FCrackZip</a>
+                            <p>How to brute forcing ZIP files with FCrackZip.</p>
+                        </div>
+                    </div>
                     <br />
                 </div>
             </div>
