--- a/CTF/tutorial/how-to-bruteforce-zip.html
+++ b/CTF/tutorial/how-to-bruteforce-zip.html
@@ -63,8 +63,8 @@
                     <hr />
                     <!-- BREADCRUMBS -->
                      <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-                        <li class="breadcrumb-item"><a href="../data.html">Docs</a></li>
+                        <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a href="/data.html">Docs</a></li>
                         <li class="breadcrumb-item active">How to bruteforce ZIP files with FCrackZip</li>
                     </ol>
                     <div class="row top-buffer">
