--- a/CTF/tutorial/how-to-bruteforce-zip.html
+++ b/CTF/tutorial/how-to-bruteforce-zip.html
@@ -123,7 +123,7 @@
                 <h4>0xR3L4T3D_L1NK5<h4>
                 <br />
                 <ul id="links">
-                        <li><a href="http://heartbleed.com/">heartbleed.com</a></li>
+                        <li><a href="http://manpages.ubuntu.com/manpages/trusty/man1/fcrackzip.1.html">FCrackZip Manpage</a></li>
                 </ul>
             </div>
             <!-- END OF CONTENT -->
