--- a/CTF/tutorial/how-to-bruteforce-zip.html
+++ b/CTF/tutorial/how-to-bruteforce-zip.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>How to bruteforce ZIP files with FCrackZip</title>
-    <link rel="shortcut icon" href="../favicon/favicon.ico"/>
+    <link rel="shortcut icon" href="../../favicon/favicon.ico"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
