--- a/CTF/tutorial/how-to-bruteforce-zip.html
+++ b/CTF/tutorial/how-to-bruteforce-zip.html
@@ -113,7 +113,7 @@
                         <center><b><p>** For more information, check out the extra links and sources. **</p></b></center>
                         <h5>50URC35:<h5>
                         <ul id="sources">
-                            <li><a href="https://en.wikipedia.org/wiki/Heartbleed">Heartbleed Wikipedia</a></li>
+                            <li><a href="http://manpages.ubuntu.com/manpages/trusty/man1/fcrackzip.1.html">FCrackZip Manpage</a></li>
                         </ul>
                         <!-- END OF ARTICLE CONTENT -->
                     </div>
