--- a/CTF/tutorial/how-to-bruteforce-zip.html
+++ b/CTF/tutorial/how-to-bruteforce-zip.html
@@ -84,7 +84,7 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <center><img src="../../images/zip.jpg" alt="FZipCrack" height="160" width="160"></center>
+                            <center><img src="../../images/zip.png" alt="FZipCrack" height="160" width="160"></center>
                         </div>
                     </div>
                     <div class="row top-buffer">
