--- a/CTF/tutorial/how-to-bruteforce-zip.html
+++ b/CTF/tutorial/how-to-bruteforce-zip.html
@@ -77,7 +77,27 @@
                                 </thead>
                                 <tbody>
                                     <tr>
+                                        <td>Author:</td>
+                                        <td>Marc Lehmann</td>
+                                    </tr>
+                                    <tr>
+                                        <td>License:</td>
+                                        <td>Open Source</td>
+                                    </tr>
+                                    <tr>
                                         <td>Software:</td>
+                                        <td>FCrackZip</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Date created:</td>
+                                        <td>Before 2008</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Updated:</td>
+                                        <td>No</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Website:</td>
                                         <td><a href="http://oldhome.schmorp.de/marc/fcrackzip.html">FCrackZip</a></td>
                                     </tr>
                                 </tbody>
@@ -119,13 +139,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-2">
+            <!--<div class="col-sm-2">
                 <h4>0xR3L4T3D_L1NK5<h4>
                 <br />
                 <ul id="links">
                         <li><a href="http://manpages.ubuntu.com/manpages/trusty/man1/fcrackzip.1.html">FCrackZip Manpage</a></li>
                 </ul>
-            </div>
+            </div>-->
             <!-- END OF CONTENT -->
             <!-- SCRIPTS -->
             <script src="../chaffle/chaffle.min.js" charset="utf-8"></script>
