--- a/CTF/tutorial/how-to-bruteforce-zip.html
+++ b/CTF/tutorial/how-to-bruteforce-zip.html
@@ -110,6 +110,7 @@
                     <div class="row top-buffer">
                         <!-- ARTICLE CONTENT -->
                         <p>0xL1NK#~ <a href="http://manpages.ubuntu.com/manpages/trusty/man1/fcrackzip.1.html">FCrackZip Manpages</a></p>
+                        <p>Last updated: 27 march 2019</p>
                         <ol>
                             <li><h5>Description</h5>
                                 <p><i>fcrackzip</i> searches each zipfile given for encrypted files and tries to guess the password. All files must be encrypted with the same password, the more files you provide, the better.</p>
