--- a/ctf-tutorial.html
+++ b/ctf-tutorial.html
@@ -102,7 +102,7 @@
                         </div>
                         <div class="col-sm-10">
                             <a href="CTF/tutorial/how-to-bruteforce-zip.html">FCrackZip</a>
-                            <p>How to brute forcing ZIP files with FCrackZip.</p>
+                            <p>How to brute force ZIP files with FCrackZip.</p>
                             <p>Added: 27 march 2019</p>
                         </div>
                     </div>
