--- a/CTF/tutorial/how-to-bruteforce-zip.html
+++ b/CTF/tutorial/how-to-bruteforce-zip.html
@@ -116,6 +116,7 @@
                                 <p><i>fcrackzip</i> searches each zipfile given for encrypted files and tries to guess the password. All files must be encrypted with the same password, the more files you provide, the better.</p>
                             </li>
                             <li><h5>Bruteforce the ZIP</h5>
+                                <p>The command below will bruteforce file.zip with a given wordlist. In this case the wordlist is the well known rockyou.txt.</p>
                                 <code>
                                     <p># Syntax</p>
                                     <p>fcrackzip -u -D -p [wordlist] [ZIP file]</p>
