--- a/CTF/tutorial/how-to-bruteforce-zip.html
+++ b/CTF/tutorial/how-to-bruteforce-zip.html
@@ -125,9 +125,9 @@
                                     <p>fcrackzip -u -D -p ~/rockyou.txt ~/file.zip</p>
                                 </code>
                                 <br />
-                                <p>-u : Try to decompress the first file by calling unzip with the guessed password. This weeds out false positives when not enough files have been given.</p>
-                                <p>-D : Select dictionary mode. In this mode, fcrackzip will read passwords from a file, which must contain one password per line and should be alphabetically sorted.</p>
-                                <p>-p : Set initial (starting) password for brute-force searching to string, or use the file with the name string to supply passwords for dictionary searching.</p>
+                                <p><strong>-u</strong> : Try to decompress the first file by calling unzip with the guessed password. This weeds out false positives when not enough files have been given.</p>
+                                <p><strong>-D</strong> : Select dictionary mode. In this mode, fcrackzip will read passwords from a file, which must contain one password per line and should be alphabetically sorted.</p>
+                                <p><strong>-p</strong> : Set initial (starting) password for brute-force searching to string, or use the file with the name string to supply passwords for dictionary searching.</p>
                             </li>
                         </ol>
                         <!-- START CONTENT HERE -->
