--- a/CTF/tutorial/how-to-bruteforce-zip.html
+++ b/CTF/tutorial/how-to-bruteforce-zip.html
@@ -136,6 +136,7 @@
                         <h5>50URC35:<h5>
                         <ul id="sources">
                             <li><a href="http://manpages.ubuntu.com/manpages/trusty/man1/fcrackzip.1.html">FCrackZip Manpage</a></li>
+                            <li><a href="http://oldhome.schmorp.de/marc/fcrackzip.html">FCrackZip Main Page</a></li>
                         </ul>
                         <!-- END OF ARTICLE CONTENT -->
                     </div>
