--- a/ctf-writeup.html
+++ b/ctf-writeup.html
@@ -67,7 +67,7 @@
                     </ol>
                     <center><p>This is the location to search for CTF write-up documentation.</p></center>
                     <br />
-                    <h4>HackTheBox.eu (HTB)</h4>
+                    <h4><a href="https://hackthebox.eu">HackTheBox.eu (HTB)</a></h4>
                     <br /><br />
                     <div class="row top-buffer">
                         <div class="col-sm-2">
