--- a/CTF/tutorial/ssh.html
+++ b/CTF/tutorial/ssh.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>SSH - Port forwarding, tunneling</title>
+    <title>SSH - Port forwarding, tunneling and other tips and tricks</title>
     <link rel="shortcut icon" href="../../favicon/favicon.ico"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../../stacksec.css">
     
     <meta charset="UTF-8">
-    <meta name="description" content="CHANGEME">
+    <meta name="description" content="SSH Tunneling, port forwarding and other tips and tricks.">
     <meta name="keywords" content="security,hacking,hack,heartbleed,krack,crack,stack,memory,stacksec,it,secure,securing,hacks,hackers,system,systems,computers,documentation,tutorial,explanation,how,to,writeup,document,vulnerability,exploit,metaspoit,kali,linux,windows,mac,vulnerable,exploitable,vuln,port,forwarding,forward,scanning,tunneling,black,white,grey,hat,information,info,book,write,secu,bleeding,heart,protect,exploitation,information security">
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,7 +59,7 @@
             <!-- CONTENT -->
             <div class="col-sm-7">
                 <div class="container-fluid">
-                    <h1>SSH</h1>
+                    <h1>SSH - Tunneling, port forwarding, ...</h1>
                     <hr />
                     <!-- BREADCRUMBS -->
                      <ol class="breadcrumb">
@@ -82,7 +82,7 @@
                                     </tr>
                                     <tr>
                                         <td>License:</td>
-                                        <td>Open Source</td>
+                                        <td>/</td>
                                     </tr>
                                     <tr>
                                         <td>Software:</td>
@@ -104,7 +104,7 @@
                             </table>
                         </div>
                         <div class="col-sm-4">
-                            <center><img src="../../images/zip.png" alt="FZipCrack" height="160" width="160"></center>
+                            <center><img src="../../images/ssh.png" alt="SSH" height="160" width="160"></center>
                         </div>
                     </div>
                     <div class="row top-buffer">
@@ -119,19 +119,15 @@
 
                                 <p>SSH was designed as a replacement for Telnet and for unsecured remote shell protocols such as the Berkeley rlogin, rsh, and rexec protocols. Those protocols send information, notably passwords, in plaintext, rendering them susceptible to interception and disclosure using packet analysis. The encryption used by SSH is intended to provide confidentiality and integrity of data over an unsecured network, such as the Internet, although files leaked by Edward Snowden indicate that the National Security Agency can sometimes decrypt SSH, allowing them to read the contents of SSH sessions.</p>
                             </li>
-                            <li><h5>Bruteforce the ZIP</h5>
-                                <p>The command below will bruteforce <strong>file.zip</strong> with a given wordlist. In this case the wordlist is the well known <strong>rockyou.txt</strong>.</p>
-                                <code>
-                                    <p># Syntax</p>
-                                    <p>fcrackzip -u -D -p [wordlist] [ZIP file]</p>
-                                    <br />
-                                    <p># Example</p>
-                                    <p>fcrackzip -u -D -p ~/rockyou.txt ~/file.zip</p>
-                                </code>
-                                <br />
-                                <p><strong>-u</strong> : Try to decompress the first file by calling unzip with the guessed password. This weeds out false positives when not enough files have been given.</p>
-                                <p><strong>-D</strong> : Select dictionary mode. In this mode, fcrackzip will read passwords from a file, which must contain one password per line and should be alphabetically sorted.</p>
-                                <p><strong>-p</strong> : Set initial (starting) password for brute-force searching to string, or use the file with the name string to supply passwords for dictionary searching.</p>
+                            <li><h5>SSH Tunneling</h5>
+                                <ul style="list-style-type:none">
+                                    <li><p>Local Port Forwarding</p>
+                                    </li>
+                                    <li><p>Remote Port Forwarding</p>
+                                    </li>
+                                    <li><p>Dynamic Port Forwarding</p>
+                                    </li>
+                                </ul>
                             </li>
                         </ol>
                         <!-- START CONTENT HERE -->
