--- a/CTF/writeup/htb/jerry.html
+++ b/CTF/writeup/htb/jerry.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-41632606-2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-41632606-2');
+    </script>
     <title>Sohvaxus - CTF Write-up - Jerry</title>
     <link rel="shortcut icon" href="../../../favicon/favicon.ico"/>
     <meta charset="utf-8">
